# gngb

./: .hgignore  AUTHORS  ChangeLog  ChangeLog~  Makefile  Makefile.am  Makefile.in  Makefile.win32  NEWS  ProjectHome.md  README  README.WIN32  TODO  ToDo.md  config.h  config.h.in  config.status  config_win32.h  configure  configure.in  cpu.c  cpu.h  debuger  debuger.c  debuger.glade  debuger.h  emu.c  emu.h  frame_skip.c  frame_skip.h  gl_gngb  gngb  gngb.1  gngb_debug.c  interrupt.c  interrupt.h  joystick.c  joystick.h  log.c  log.h  (+19 more)
debian/: README.Debian  changelog  conffiles.ex  control  copyright  docs  gngb.manpages  rules  watch
debuger/: Makefile  code_info.c  code_info.h  cpu_info.c  cpu_info.h  debug.txt  debuger  debuger.glade  debuger.glade.bak  debuger.h  gdebuger.c  gngb_debuger  gngb_debuger.c  io_info.c  io_info.h  log.c  log.h  mem_info.c  mem_info.h  op.c  op.h
src/: Makefile  Makefile.am  Makefile.in  cpu.c  cpu.h  emu.c  emu.c~  emu.h  fileio.c  fileio.h  frame_skip.c  frame_skip.c~  frame_skip.h  global.h  interrupt.c  interrupt.c~  interrupt.h  main.c  memory.c  memory.h  menu.c  menu.h  menu_image.h  message.c  message.h  rom.c  rom.h  save.c  save.h  serial.c  serial.h  sgb.c  sgb.h  sound.c  sound.h  tiny_font.c  tiny_font.h  unzip.c  video_gl.c  video_gl.h  (+8 more)
src/.deps/: cpu.P  emu.P  frame_skip.P  interrupt.P  main.P  memory.P  message.P  rom.P  serial.P  sgb.P  sound.P  tiny_font.P  vram.P
src/gngb_debuger/: Makefile  Makefile.am  Makefile.in  break.c  break.h  code_info.c  cpu_info.c  debuger.c  debuger.h  debuger_wid.h  int_info.c  io_info.c  log.h  main.c  mem_info.c  menu.c  msg_dbg.c  op.c  op.h  vram_info.c
src/gngb_debuger/.deps/: break.P  code_info.P  cpu_info.P  debuger.P  io_info.P  main.P  mem_info.P  menu.P  msg_dbg.P  op.P
src/gngb_debuger_curses/: Makefile  Makefile.in  README  io_info.c  log.c  main.c  msg_info.c  op.c  op.h
